--- a/Página_OBR/styles.css
+++ b/Página_OBR/styles.css
@@ -6,20 +6,11 @@
 
 body {
     background-color: #171717;
+    font-family: "Teko", sans-serif;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    overflow: auto;
-}
-
-.container {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
-    flex: 1;
+    color: #ffffff;
 }
 
 .headerOptions {
@@ -27,36 +18,85 @@ body {
     height: 75px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    padding-right: 70px;
-    padding-top: 7px;
+    justify-content: space-between;
+    padding: 0 20px;
+    background-color: #0058bd;
 }
 
 #logoHeader {
-    width: 5vw;
+    width: 120px;
     height: auto;
 }
 
-.container {
-    width: 100%;
-    height: 100vh;
+.menu {
+    list-style: none;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
+    gap: 20px;
+}
+
+.menu li {
+    position: relative;
+}
+
+.menu a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: 500;
+}
+
+#dropdownContatos {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #0058bd;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.contatos:hover #dropdownContatos {
+    display: block;
+}
+
+#dropdownContatos ul {
+    list-style: none;
+}
+
+#dropdownContatos a {
+    color: #ffffff;
+}
+
+.container {
     flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    text-align: center;
 }
 
 h1 {
-    text-align: center;
-    font-size: 80px;
-    font-family: "Teko", sans-serif;
-    font-optical-sizing: auto;
+    font-size: 3rem;
     color: #0058bd;
-    padding-bottom: 2rem;
-    font-weight: 400;
 }
 
-a {
-    text-decoration: none;
+@media (max-width: 768px) {
+    h1 {
+        font-size: 2rem;
+    }
+    
+    #logoHeader {
+        width: 90px;
+    }
+
+    .headerOptions {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .menu {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
 }
