--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
     position: absolute;
     left: 0px;
     top: 0px;
+    animation: rotateGear 15s linear infinite;
 }
 
 #gear2 {
@@ -27,6 +28,16 @@ body {
     right: 0px;
     top: 0px;
     transform: scaleX(-1);
+    animation: rotateGear 15s linear infinite reverse;
+}
+
+@keyframes rotateGear {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .container {
@@ -57,6 +68,8 @@ h1 {
 
 .cards {
     display: flex;
+    justify-content: center;
+    gap: 7rem;
     margin-bottom: 8vh;
     background-image: url(./assets/Detalhes.png);
     background-repeat: repeat;
@@ -65,28 +78,23 @@ h1 {
 .card {
     width: 220px;
     height: 210px;
-    margin-left: 32px;
     background-color: #142c4b;
     border-radius: 30px;
-    margin: 0 7rem 0 7rem;
-    transition: translate 0.5s;
-
+    transition: transform 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card:hover {
-    translate: 0 -20px;
+    transform: translateY(-20px);
+}
+
+.cardTitle {
+    color: #ffffff;
+    font-size: 24px;
 }
 
 a {
     text-decoration: none;
-}
-
-
-.cardTitle{
-    color: #ffffff;
-}
-
-#cardTitle{
-    color: #ffffff;
-    font-size: 60px;
 }
