--- a/Página_OBR/styles.css
+++ b/Página_OBR/styles.css
@@ -27,9 +27,8 @@ body {
     height: 75px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    padding-right: 70px;
-    padding-top: 7px;
+    justify-content: space-between;
+    padding: 7px 30px 0 30px;
 }
 
 #logoHeader {
@@ -37,7 +36,7 @@ body {
     height: auto;
 }
 
-.container {
+.caddntainer {
     width: 100%;
     height: 100vh;
     display: flex;
