--- a/Página_TBR/styles.css
+++ b/Página_TBR/styles.css
@@ -28,12 +28,22 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 50px 25px 30px 30px;
+    padding: 30px 25px 0 30px;
 }
 
 #logoHeader {
     width: 5vw;
     height: auto;
+}
+
+.caddntainer {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    flex: 1;
 }
 
 h1 {
@@ -49,11 +59,11 @@ h1 {
 a {
     text-decoration: none;
 }
-    
+
 ul {
     display: flex;
     align-items: center;
-    gap: 100px;
+    gap: 300px;
     font-family: "Teko", sans-serif;
 }
 
@@ -61,13 +71,6 @@ li {
     font-size: 25px;
     list-style-type: none;
     color: #0058bd;
-}
-
-.menu li a:hover {
-    background-color: #0085FF;
-    color: white;
-    border-radius: 5px;
-    transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 a {
@@ -78,39 +81,3 @@ a {
 a:hover {
     color: #0371d7;
 }
-
-#setinha {
-    width: 1.8vw;
-    height: auto;
-}
-
-#dropdownContatos {
-    display: none;
-    opacity: 0;
-}
-
-ul li:hover #dropdownContatos {
-    display: block;
-    position: absolute;
-    background-color: #aed5f1;
-    border-radius: 10px;
-    opacity: 100%;
-    transform-origin: left;
-}
-
-#dropdownContatos ul {
-    display: block;
-    margin: 10px;
-}
-
-#dropdownContatos ul li {
-    width: 10px;
-    padding: 10px;
-}
-
-#dropdownContatos ul li a {
-    font-family: "Teko", sans-serif;
-    color: #003E78;
-}
-
-
