--- a/Página_TBR/styles.css
+++ b/Página_TBR/styles.css
@@ -28,22 +28,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 30px 25px 0 30px;
+    padding: 50px 25px 30px 30px;
 }
 
 #logoHeader {
     width: 5vw;
     height: auto;
-}
-
-.caddntainer {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
-    flex: 1;
 }
 
 h1 {
@@ -59,11 +49,11 @@ h1 {
 a {
     text-decoration: none;
 }
-
+    
 ul {
     display: flex;
     align-items: center;
-    gap: 300px;
+    gap: 100px;
     font-family: "Teko", sans-serif;
 }
 
@@ -71,6 +61,13 @@ li {
     font-size: 25px;
     list-style-type: none;
     color: #0058bd;
+}
+
+.menu li a:hover {
+    background-color: #0085FF;
+    color: white;
+    border-radius: 5px;
+    transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 a {
@@ -81,3 +78,39 @@ a {
 a:hover {
     color: #0371d7;
 }
+
+#setinha {
+    width: 1.8vw;
+    height: auto;
+}
+
+#dropdownContatos {
+    display: none;
+    opacity: 0;
+}
+
+ul li:hover #dropdownContatos {
+    display: block;
+    position: absolute;
+    background-color: #aed5f1;
+    border-radius: 10px;
+    opacity: 100%;
+    transform-origin: left;
+}
+
+#dropdownContatos ul {
+    display: block;
+    margin: 10px;
+}
+
+#dropdownContatos ul li {
+    width: 100px;
+    padding: 10px;
+}
+
+#dropdownContatos ul li a {
+    font-family: "Teko", sans-serif;
+    color: #003E78;
+}
+
+
