--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,7 @@ body {
     width: 100%;
     height: 100vh;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: space-between;
     flex-direction: column;
     flex: 1;
 }
@@ -57,9 +56,11 @@ h1 {
 
 .cards {
     display: flex;
+    justify-content: space-evenly;
     bottom: 0px;
     background-image: url(./assets/Detalhes.png);
     background-repeat: round;
+    padding-bottom: 4.5rem;
 }
 
 .cards img {
@@ -68,13 +69,15 @@ h1 {
 
 .card {
     width: 220px;
-    height: 210px;
+    height: 225px;
     align-items: center;
     margin-left: 32px;
     background-color: #142c4b;
     border-radius: 30px;
     margin: 0 7rem 0 7rem;
     transition: translate 0.5s;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .card:hover {
